--- a/templates/pages/visitor/registration/register.html.twig
+++ b/templates/pages/visitor/registration/register.html.twig
@@ -23,7 +23,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     {# My stylesheet #}
-    <link rel="stylesheet" href="/styles/app.css">
+    <link rel="stylesheet" href="/styles/style.css">
 
 </head>
 <body>
@@ -100,7 +100,7 @@
                 <div class="my-3 text-center">
                     <p>
                         Vous avez déjà un compte? 
-                        <a href="#">Connectez-vous</a>
+                        <a href="{{path('visitor_authentication_login')}}">Connectez-vous</a>
                     </p>
                     <p>
                         <a href="{{path('visitor_welcome_index')}}">Retour à l'accueil</a>
