--- a/templates/themes/base_visitor.html.twig
+++ b/templates/themes/base_visitor.html.twig
@@ -22,7 +22,7 @@
     {# CSS part of Bootstrap 5 #}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="/styles/app.css">
+    <link rel="stylesheet" href="/styles/style.css">
 
 </head>
 <body>
@@ -49,13 +49,19 @@
                         <a class="nav-link" href="{{path('visitor_contact_index')}}">Contact</a>
                     </li>
                 </ul>
-                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Connexion</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{path('visitor_registration_register')}}">Inscription</a>
-                    </li>
+                <ul class="navbar-nav ms-auto">
+                    {% if app.user %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{path('app_logout')}}">Déconnexion</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{path('visitor_authentication_login')}}">Connexion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{path('visitor_registration_register')}}">Inscription</a>
+                        </li>
+                    {% endif %}
                 </ul>
           </div>
         </div>
