--- a/templates/themes/base_admin.html.twig
+++ b/templates/themes/base_admin.html.twig
@@ -180,7 +180,7 @@
                         </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
+                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="{{path('admin_category_index')}}">
                             <i class="fa-regular fa-folder-open"></i>
                             Catégories
                         </a>
@@ -198,13 +198,13 @@
                         </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2" href="#">
+                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
                             <svg class="bi"><use xlink:href="#graph-up"/></svg>
                             Reports
                         </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2" href="#">
+                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
                             <svg class="bi"><use xlink:href="#puzzle"/></svg>
                             Integrations
                         </a>
@@ -219,25 +219,25 @@
                     </h6>
                     <ul class="nav flex-column mb-auto">
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2" href="#">
+                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
                             <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
                             Current month
                         </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2" href="#">
+                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
                             <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
                             Last quarter
                         </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2" href="#">
+                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
                             <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
                             Social engagement
                         </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2" href="#">
+                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
                             <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
                             Year-end sale
                         </a>
@@ -248,13 +248,13 @@
 
                     <ul class="nav flex-column mb-auto">
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2" href="#">
+                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
                             <svg class="bi"><use xlink:href="#gear-wide-connected"/></svg>
                             Paramètres
                         </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2" href="#">
+                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
                             <svg class="bi"><use xlink:href="#door-closed"/></svg>
                             Se déconnecter
                         </a>
