--- a/templates/pages/admin/category/edit.html.twig
+++ b/templates/pages/admin/category/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'themes/base_admin.html.twig' %}
 
-{% block title %}Nouvelle catégorie{% endblock %}
+{% block title %}Modifier: {{category.name}}{% endblock %}
 
-{% block description %}Nouvelle catégorie{% endblock %}
+{% block description %}Modifier cette catégorie{% endblock %}
 
-{% block keywords %}Admin, nouvelle, catégories{% endblock %}
+{% block keywords %}Admin, nmodifier, catégories{% endblock %}
 
 {% block main %}
-    <h1 class="text-center my-3 display-5">Nouvelle catégorie<hr></h1>
+    <h1 class="text-center my-3 display-5">Modifier cette catégorie<hr></h1>
 
     <div class="container mt-5">
         <div class="row">
@@ -19,7 +19,7 @@
                         {{form_widget(form.name, {'attr':{'class':'form-control', 'autofocus':'autofocus'}})}}
                     </div>
                     <div class="mb-3">
-                        <input formnovalidate type="submit" class="btn btn-primary shadow" value="Créer">
+                        <input formnovalidate type="submit" class="btn btn-primary shadow" value="Modifier">
                     </div>
                 {{form_end(form)}}
             </div>
