--- a/templates/pages/admin/category/index.html.twig
+++ b/templates/pages/admin/category/index.html.twig
@@ -6,15 +6,35 @@
 
 {% block keywords %}Admin, liste, catégories{% endblock %}
 
+{% block jQuery %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+{% endblock %}
+
+{% block DataTables %}
+    <link href="https://cdn.datatables.net/v/bs5/dt-2.0.7/datatables.min.css" rel="stylesheet">
+    <script src="https://cdn.datatables.net/v/bs5/dt-2.0.7/datatables.min.js"></script>
+    <script>
+        $(document).ready( function () {
+            $('#myTable').DataTable({
+                language: { 
+                    url: 'https://cdn.datatables.net/plug-ins/2.0.7/i18n/fr-FR.json'
+                },
+            })
+        } );
+    </script>
+{% endblock %}
+
 {% block main %}
     <h1 class="text-center my-3 display-5">Liste des catégories<hr></h1>
+
+    {% include 'components/_alert.html.twig' %}
 
     <div class="d-flex justify-content-end align-items-center my-3">
         <a href="{{path('admin_category_create')}}" class="btn btn-primary shadow"><i class="fa-solid fa-plus"></i> Nouvelle catégorie</a>
     </div>
 
     <div class="table-responsive">
-        <table class="table table-hover text-center table-bordered">
+        <table id="myTable" class="table table-hover text-center table-bordered">
             <thead class="table-dark">
                 <tr>
                     <th>Id</th>
@@ -33,10 +53,13 @@
                         <td>{{category.slug}}</td>
                         <td>{{category.createdAt|format_datetime()}}</td>
                         <td>{{category.updatedAt|format_datetime()}}</td>
-                        <td class="d-flex justify-content-evenly">
-                            <a href=""><i class="fa-solid fa-pen"></i></a>
-                            <a href=""><i style="color:red" class="fa-solid fa-trash"></i></a>
-                    </td>
+                        <td class="d-flex justify-content-evenly ">
+                            <a href="{{path('admin_category_edit', {'id':category.id})}}" type="submit" class="btn btn-primary" value="Modifier">Modifier</a>
+                            <form action="{{path('admin_category_delete', {'id':category.id})}}" method="post">
+                                <input type="hidden" name="_csrf_token" value="{{csrf_token('delete_category_'~category.id)}}">
+                                <input onclick="return confirm('Confirmer la suppression?')" type="submit" class="btn btn-primary btn-danger" value="Supprimer">
+                            </form>
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
