sprint3-ticket3-feat: Gestion des articles Partie 1

--- a/templates/themes/base_admin.html.twig
+++ b/templates/themes/base_admin.html.twig
@@ -192,8 +192,8 @@
                         </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
-                            <i class="fa-solid fa-newspaper"></i>
+                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="{{path('admin_post_index')}}">
+                            <i class="fa-solid fa-feather-pointed"></i>
                             Articles
                         </a>
                         </li>
@@ -261,7 +261,7 @@
                         </li>
                         <li class="nav-item">
                         <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
-                            <svg class="bi"><use xlink:href="#door-closed"/></svg>
+                            <i class="fa-solid fa-right-from-bracket"></i>
                             Se déconnecter
                         </a>
                         </li>
