--- a/templates/pages/admin/tag/create.html.twig
+++ b/templates/pages/admin/tag/create.html.twig
@@ -1,25 +1,25 @@
 {% extends 'themes/base_admin.html.twig' %}
 
-{% block title %}Modifier: {{category.name}}{% endblock %}
+{% block title %}Nouveau Tag{% endblock %}
 
-{% block description %}Modifier cette catégorie{% endblock %}
+{% block description %}Nouveau Tag{% endblock %}
 
-{% block keywords %}Admin, modifier, catégories{% endblock %}
+{% block keywords %}Admin, ajout, tags{% endblock %}
 
 {% block main %}
-    <h1 class="text-center my-3 display-5">Modifier cette catégorie<hr></h1>
+    <h1 class="text-center my-3 display-5">Nouveau Tag<hr></h1>
 
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-4 mx-auto">
                 {{form_start(form)}}
                     <div class="mb-3">
-                        <label for="admin_category_form_name">Nom</label>
+                        <label for="admin_tag_form_name">Nom</label>
                         <div class="text-danger">{{form_errors(form.name)}}</div>
                         {{form_widget(form.name, {'attr':{'class':'form-control', 'autofocus':'autofocus'}})}}
                     </div>
                     <div class="mb-3">
-                        <input formnovalidate type="submit" class="btn btn-primary shadow" value="Modifier">
+                        <input formnovalidate type="submit" class="btn btn-primary shadow" value="Créer">
                     </div>
                 {{form_end(form)}}
             </div>
