--- a/templates/pages/admin/tag/edit.html.twig
+++ b/templates/pages/admin/tag/edit.html.twig
@@ -1,20 +1,20 @@
 {% extends 'themes/base_admin.html.twig' %}
 
-{% block title %}Modifier: {{category.name}}{% endblock %}
+{% block title %}Modifier: {{tag.name}}{% endblock %}
 
-{% block description %}Modifier cette catégorie{% endblock %}
+{% block description %}Modifier {{tag.name}}{% endblock %}
 
-{% block keywords %}Admin, modifier, catégories{% endblock %}
+{% block keywords %}Admin, modifier, tags{% endblock %}
 
 {% block main %}
-    <h1 class="text-center my-3 display-5">Modifier cette catégorie<hr></h1>
+    <h1 class="text-center my-3 display-5">Modifier {{tag.name}}<hr></h1>
 
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-4 mx-auto">
                 {{form_start(form)}}
                     <div class="mb-3">
-                        <label for="admin_category_form_name">Nom</label>
+                        <label for="admin_tag_form_name">Nom</label>
                         <div class="text-danger">{{form_errors(form.name)}}</div>
                         {{form_widget(form.name, {'attr':{'class':'form-control', 'autofocus':'autofocus'}})}}
                     </div>
