--- a/templates/pages/admin/post/index.html.twig
+++ b/templates/pages/admin/post/index.html.twig
@@ -15,14 +15,14 @@
     <script src="https://cdn.datatables.net/v/bs5/dt-2.0.7/datatables.min.js"></script>
     <script>
         $(document).ready( function () {
-            $('#Table').DataTable({
+            $('#myTable').DataTable({
                 language: { 
                     url: 'https://cdn.datatables.net/plug-ins/2.0.7/i18n/fr-FR.json'
                 },
             })
         } );
     </script>
-{% endblock %} 
+{% endblock %}
 
 {% block main %}
     <h1 class="text-center my-3 display-5">Liste des Articles<hr></h1>
@@ -41,6 +41,7 @@
                     <th>Image</th>
                     <th>Titre</th>
                     <th>Catégorie</th>
+                    <th>Tags</th>
                     <th>Publié?</th>
                     <th>Le contenu</th>
                     <th>Créé le</th>
@@ -61,6 +62,15 @@
                         </td>
                         <td>{{post.title}}</td>
                         <td>{{post.category.name}}</td>
+                        <td>
+                            {% if post.tags is empty %}
+                                <span>---</span>
+                            {% else %}
+                                {% for tag in post.tags %}
+                                    {{tag.name}}
+                                {% endfor %}
+                            {% endif %}
+                        </td>
                         <td class="d-flex flex-column justify-centent-center align-items-center">
                             {% if post.isPublished  %}
                                 <span>Publié le {{post.publishedAt|format_datetime()}}</span> 
