sprint3-ticket5-feat: L'admin peut maintenant relier des tags à ses articles

--- a/templates/themes/base_admin.html.twig
+++ b/templates/themes/base_admin.html.twig
@@ -158,7 +158,7 @@
 
     {# Navbar #}
     <header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow" data-bs-theme="dark">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" href="#">JD</a>
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" href="">JD</a>
 
         <ul class="navbar-nav flex-row d-md-none">
             <li class="nav-item text-nowrap">
@@ -231,28 +231,28 @@
                     </h6>
                     <ul class="nav flex-column mb-auto">
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
-                            <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
-                            Current month
-                        </a>
+                            <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
+                                <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
+                                Current month
+                            </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
-                            <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
-                            Last quarter
-                        </a>
+                            <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
+                                <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
+                                Last quarter
+                            </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
-                            <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
-                            Social engagement
-                        </a>
+                            <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
+                                <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
+                                Social engagement
+                            </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
-                            <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
-                            Year-end sale
-                        </a>
+                            <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
+                                <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
+                                Year-end sale
+                            </a>
                         </li>
                     </ul>
 
@@ -260,16 +260,17 @@
 
                     <ul class="nav flex-column mb-auto">
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
-                            <svg class="bi"><use xlink:href="#gear-wide-connected"/></svg>
-                            Paramètres
-                        </a>
+                            <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
+                                <svg class="bi"><use xlink:href="#gear-wide-connected"/></svg>
+                                Paramètres
+                            </a>
                         </li>
+                        
                         <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
-                            <i class="fa-solid fa-right-from-bracket"></i>
-                            Se déconnecter
-                        </a>
+                            <a class="nav-link d-flex align-items-center gap-2 text-dark" href="{{path('app_logout')}}">
+                                <i class="fa-solid fa-right-from-bracket"></i>
+                                Se déconnecter
+                            </a>
                         </li>
                     </ul>
                     </div>
