--- a/templates/pages/admin/post/index.html.twig
+++ b/templates/pages/admin/post/index.html.twig
@@ -8,19 +8,15 @@
 
 {% block jQuery %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-{% endblock %} 
+{% endblock %}
 
-{% block DataTables %}
-    <link href="https://cdn.datatables.net/v/bs5/dt-2.0.7/datatables.min.css" rel="stylesheet">
-    <script src="https://cdn.datatables.net/v/bs5/dt-2.0.7/datatables.min.js"></script>
+{% block select2 %}
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
-        $(document).ready( function () {
-            $('#myTable').DataTable({
-                language: { 
-                    url: 'https://cdn.datatables.net/plug-ins/2.0.7/i18n/fr-FR.json'
-                },
-            })
-        } );
+        $(document).ready(function() {
+            $('#admin_post_form_tags').select2();
+        });
     </script>
 {% endblock %}
 
@@ -67,7 +63,7 @@
                                 <span>---</span>
                             {% else %}
                                 {% for tag in post.tags %}
-                                    {{tag.name}}
+                                    <span class="badge text-bg-secondary">{{tag.name}}</span>
                                 {% endfor %}
                             {% endif %}
                         </td>
@@ -94,7 +90,7 @@
                             <a href="{{path('admin_post_edit', {'id':post.id})}}" type="submit" class="btn btn-primary" value="Modifier">Modifier</a>
                             <form action="{{path('admin_post_delete', {'id':post.id})}}" method="POST">
                                 <input type="hidden" name="_csrf_token" value="{{csrf_token('delete_post_'~post.id)}}">
-                                  <input onclick="return confirm('En supprimant cette catégorie, vous supprimez également tous les articles qui lui sont associés. Vous confirmez?')" type="submit" class="btn btn-sm btn-danger mx-2" value="Supprimer">
+                                  <input onclick="return confirm('En supprimant cette catégorie, vous supprimez également tous les articles qui lui sont associés. Vous confirmez?')" type="submit" class="btn btn-danger mx-2" value="Supprimer">
                             </form>
                         </td>
                     </tr>
