--- a/templates/themes/base_visitor.html.twig
+++ b/templates/themes/base_visitor.html.twig
@@ -1,83 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="fr">
+    <head>
+        <meta charset="UTF-8">
+        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    {# Title #}
-    <title>{% block title %}{% endblock %} - Blog de Jean Dupont</title>
+        {# Title #}
+        <title>{% block title %}{% endblock %} - Blog de Jean Dupont</title>
 
-    {# Google font #}
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&family=Satisfy&display=swap" rel="stylesheet">
+        {# SEO #}
+        <meta name="robots" content="index, allow">
+        <meta name="description" content="{% block description %}{% endblock %}">
+        <meta name="keywords" content="{% block keywords %}{% endblock %}">
+        <meta name="author" content="bastille">
+        <meta name="publisher" content="bastille">
 
-    {# SEO #}
-    <meta name="robots" content="index, allow">
-    <meta name="description" content="{% block description %}{% endblock %} ">
-    <meta name="keywords" content="{% block keywords %}{% endblock %} ">
-    <meta name="author" content="bastille">
-    <meta name="publisher" content="bastille">
+        {# Css part of Bootstrap 5 #}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    </head>
+    <body>
 
-    {# CSS part of Bootstrap 5 #}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="/styles/style.css">
-
-</head>
-<body>
-
-    {# Navbar #}
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{{path('visitor_welcome_index')}}">JD</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{path('visitor_welcome_index')}}">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Qui suis-je?</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{path('visitor_blog_index')}}">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{path('visitor_contact_index')}}">Contact</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ms-auto">
-                    {% if app.user %}
+        {# Navbar #}
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{{path('visitor_welcome_index')}}">JD</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="{{path('app_logout')}}">Déconnexion</a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{path('visitor_authentication_login')}}">Connexion</a>
+                            <a class="nav-link active" aria-current="page" href="{{path('visitor_welcome_index')}}">Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{path('visitor_registration_register')}}">Inscription</a>
+                            <a class="nav-link" href="#">Qui suis-je?</a>
                         </li>
-                    {% endif %}
-                </ul>
-          </div>
-        </div>
-    </nav>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{path('visitor_blog_index')}}">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{path('visitor_contact_index')}}">Contact</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto">
+                        {% if app.user %}
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{path('admin_home')}}">Espace admin</a>
+                                </li>
+                            {% endif %}
+                            {% if is_granted('ROLE_USER') %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="">Espace utilisateur</a>
+                                </li>
+                            {% endif %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{path('app_logout')}}">Déconnexion</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{path('visitor_authentication_login')}}">Connexion</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{path('visitor_registration_register')}}">Inscription</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
-    {# The specific content for each page #}
-    <main class="container-fluid">
-        {% block main %}{% endblock %}
-    </main>
+        {# The specific content for each page #}
+        <main class="container-fluid">
+            {% block main %}{% endblock %}
+        </main>
 
-    {# Footer #}
-    <footer class="text-center my-3">
-        <p>dwwm</p>
-    </footer>
-
-    {# JS part of Bootstrap 5 #}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+        {# Footer #}
+        <footer>
+            <p>dwwm</p>
+        </footer>
+        
+        {# Js part of Bootstrap 5 #}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </body>
 </html>
